<resources>
    <string name="app_name">Boom Brains</string>

    <string name="AppLanguageText">English</string>
    <string name="ChangeLanguage">Language</string>

    <string name="PlayBtn">Play</string>
    <string name="Pause">Pause</string>
    <string name="YourRecord">Your record</string>
    <string name="HowToPlay">How to play?</string>
    <string name="Record">Record: </string>
    <string name="Continue">Continue</string>
    <string name="Restart">Restart</string>
    <string name="Sound">Sound</string>
    <string name="Mute">Mute</string>
    <string name="Vibration">Vibration</string>
    <string name="Exit">Exit</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>


    <string name="YourScore">Your score: </string>
    <string name="Score">Score: </string>
    <string name="Level">Level: </string>
    <string name="Mistakes">Mistakes: </string>

    <string name="Again">Again</string>


    <string name="CongratulationNewRecord">Congratulations! \n You set a new record!</string>
    <string name="SchulteNextNumber">Next number: </string>

    <string name="AttentionSchulteTable">Schulte Table</string>
    <string name="AttentionFigure">Find Number</string>
    <string name="MemoryRemNum">Remember Number</string>
    <string name="NumberZnaki">Calculation</string>
    <string name="Equation">Equation</string>
    <string name="RememberWords">Remember Words</string>
    <string name="ShulteLetters">Schulte Letters</string>

    <string name="YesNoTimeOutAnswer">Time out</string>

    <string name="SchulteInfo">Schulte Table - is a game for your concentration and for your fast reading. You need to collect numbers in ascending order.</string>
    <string name="SchulteLetterInfo">Schulte Letters - is a game for your concentration and for your fast reading. You need to collect letters alphabetically.</string>
    <string name="RemNumInfo">Remember Number - is a game for your memory.</string>
    <string name="FindNumberInfo">Find Number - find number on the display as much as it possible, to earn more money.</string>
    <string name="NumberZnakiInfo">Calculation - solve the problem and find the answer among these numbers as quickly as possible in order to achieve a great result.</string>
    <string name="EquationInfo">Equation - set the order of arithmetic operations from the list so that it matches the answer. You need to decide as quickly as possible in order to achieve a great result.</string>
    <string name="RatingMessage">Your opinion is very important to us!</string>
    <string name="RateApp">Rate</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="Task">Tasks</string>
    <string name="RatingFriends">Friends rating</string>
    <string name="Rules">Rules</string>
    <string name="RemWordsInfo">Remember Words - is a game for your memory. You need to remember words that shown in the screen and click as fast, as it possible.</string>
    <string name="NextLetter">Next Letter: </string>

    <string name="Profile">Profile</string>
    <string name="Authorization">Login</string>
    <string name="VhodVAccount">Login</string>
    <string name="Hint">Email</string>
    <string name="PassHint">Password</string>
    <string name="Voiti">Log in</string>
    <string name="Register">Registration</string>
    <string name="ForgetPass">Forgot password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Agreement">I accept the user agreement.</string>
    <string name="name">UserName</string>
    <string name="MainProfInfo">Register or log in to get access to all the features.</string>
    <string name="YourRating">Your rating</string>

    <string name="Vypolni">Complete tasks and earn rewards and achievements</string>
    <string name="Achievement">Achievements</string>
    <string name="Dokazhi">Prove to your friends that you are the best, beat their records and rise to first place.</string>
    <string name="Sorevnui">Compete with friends</string>
    <string name="Zolotoi">Get to the golden league, challenge the best players.</string>
    <string name="Znanie">Ranks and leagues</string>
    <string name="achievements">Achievements</string>
    <string name="league">League</string>
    <string name="ResetPass">Password recovery</string>
    <string name="ResetInfo">To restore access to your account, please indicate the Email address that was specified during registration. A new password will be sent to it.</string>
    <string name="Confirm">Confirm</string>

    <string name="EmailNotCorrect">Email is not correct!</string>
    <string name="UserNameNotCorrect">Username must contain at least 4 letters</string>
    <string name="PasswordNotCorrect">Password must contain at least 4 letters</string>
    <string name="PassNotMatch">Passwords didn\'t match</string>
    <string name="AcceptAgreement">Please accept the user agreement</string>
    <string name="CheckConnection">Please check your network connection!</string>
    <string name="EmptyFields">Fields can\'t be empty!</string>
    <string name="ChangePass">Change Password</string>
    <string name="CurrentPass">Current password</string>
    <string name="NewPass">New password</string>
    <string name="CurrPassNotCorrect">Current password is not correct</string>
    <string name="SuccessChangePass">Password successfully changed</string>

    <!-- English names -->
    <string name="SquareMemory">Memory Square</string>
    <string name="Figures">Colored Figures</string>
    <string name="Colors">Colored words</string>

    <string name="SquaresInfo">Memory Square - you have to remember position of orange squares that are shown in the matrix and tap the squares as fast as possible.</string>
    <string name="ColorsInfo">Colored Words - you will be given color with a different name at the top of the screen. From the list below, you have to find and tap the name of given color as fast as possible.</string>
    <string name="FiguresInfo">Colored Figures - you have to find the most common colored figures and tap as fast as possible.</string>
    <string name="FindColor">Find the name of given color</string>

    <string name="ColorRed">Red</string>
    <string name="ColorBlue">Blue</string>
    <string name="ColorOrange">Orange</string>
    <string name="ColorBlack">Black</string>
    <string name="ColorBrown">Brown</string>
    <string name="ColorGreen">Green</string>
    <string name="ColorPink">Pink</string>
    <string name="ColorViolet">Violet</string>
    <string name="LogoutError">Error with logging out!</string>
    <string name="world_records">World Records</string>
    <string name="Requests">Requests</string>
    <string name="AddFriend">Add</string>
    <string name="WorldRating">World Rating</string>

    <string name="Statictics">More Statistics</string>
    <string name="MoreText">In your personal account you can see detailed statistics of your workouts on website</string>
    <string name="AddNewFriend">Add friend</string>
    <string name="reject">Reject</string>
    <string name="account">Edit Profile</string>
    <string name="Social">Social</string>
    <string name="UserId">User ID</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="change_username">Change username</string>
    <string name="change">Change</string>
    <string name="NotChanged">Username is not changed</string>
    <string name="UseOnlyEnglish">You should use only English letters</string>
    <string name="AreYouSureDelete">Are you sure to delete this user from friends?</string>
    <string name="Delete">Delete</string>
    <string name="EmptyList">The list is empty</string>
    <string name="Rating">Rating</string>

    <string name="ErrorAdFriends">Error with adding friends!</string>
    <string name="TokenDeleted">Another user logged in!</string>
    <string name="ServerNotFound">Server not found!</string>
    <string name="RequestAccepted">Request accepted!</string>
    <string name="ErrAccepting">Error with accepting friend!</string>
    <string name="RequestDeclined">Request declined!</string>
    <string name="ErrRejecting">Error with rejecting!</string>
    <string name="ErrDeleteUser">Error with deleting the user!</string>
    <string name="DeleteSuccess">Friend deleted successfully!</string>
    <string name="RequestSend">Friend request sent!</string>
    <string name="potion">Inventory</string>
    <string name="Finish">Finish</string>
    <string name="LifeEnded">You made a mistake 3 times, you can restore one life by watching ads.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Color names -->

</resources>
