<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pauseBack"
    android:layout_width="250dp"
    android:layout_height="310dp"
    android:layout_gravity="center"
    android:background="@drawable/pause_shulte"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="20dp"
    android:paddingRight="25dp"
    android:paddingBottom="45dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/Pause"
        android:textColor="#fff"
        android:textSize="20sp"
        app:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/return_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Continue"
        android:textColor="#000"
        app:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/restart_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Restart"
        android:textColor="#000"
        app:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/sound_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Sound"
        android:textColor="#000"
        app:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/exit_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Exit"
        android:textColor="#000"
        app:fontFamily="@font/roboto" />

</LinearLayout>