<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shulte_back"
    tools:context="kz.almaty.boombrains.ui.game_pages.shulte_page.ShulteLevel">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/easyBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/cancel_lang"
            android:elevation="1dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/Easy"
            android:textColor="@color/shulteLevel"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/mediumBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/hardBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/cancel_lang"
            android:elevation="1dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/Hard"
            android:textColor="@color/shulteLevel"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mediumBtn"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/mediumBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/cancel_lang"
            android:elevation="1dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/Medium"
            android:textColor="@color/shulteLevel"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/hardBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/easyBtn"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
